2005-04-01  Adi Attar  <aattar@cvs.gnome.org>

	* configure.in: Added "xh" to ALL_LINGUAS.

2005-03-31  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS.

2005-03-10  Pawan Chitrakar  <pawan@nplinux.org>

	* configure.in: Added ne "Nepali" in ALL_LINGUAS

=== gtksourceview 1.2.0 ===

2005-03-08  Paolo Maggi  <paolo@gnome.org>

	* NEWS:
	* README:
	* configure.in: 1.2.0 release

=== gtksourceview 1.1.93 ===

2005-03-01  Paolo Maggi  <paolo@gnome.org>
	
	* configure.in:
	* README:
	* NEWS: 1.1.93 release

2005-03-01  Paolo Maggi  <paolo@gnome.org>

	Patches by Paolo Borelli <pbor@katamail.com>

	* gtksourceview/gtksourceiter.c (pointer_from_offset_skipping_decomp);
	"offset" passed to pointer_from_offset_skipping_decomp is the number of chars 
	before the match in the string after both casefold and normalize. 
	The function walks the original string one character at a time and to 
	find out how much to substract from offset it has to both casefold and 
	normalize the current char. Before the patch, it didn't casefold the 
	current char, and since casefold may change the lenght of the string 
	it ended up returning a pointer to the wrong character in the string.
	(forward_chars_with_skipping): minimal 
	workaround to avoid the infinite loop of bug #168247.  It doesn't fix the 
	problem, just the symptom.

2005-02-27  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/gtksourceview.c (gtk_source_view_expose): Replaced
	gtk_paint_flat_box() call with plain gdk_draw_rectangle(). Fixes
	bug #164066.

2005-02-24  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/gtksourcebuffer.c (gtk_source_buffer_finalize): 
	fixed bug #168229 (disconnect tag table signal handlers in destructor). 
	Patch by Yevgen Muntyan <muntyan@tamu.edu>.

2005-02-24  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/language-specs/idl.lang: rewritten

2005-02-23  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview.c: small cleanup.
